# PDSA2-CW

./: FULL_PROJECT_DDL.sql  GAME_HUB_README.md  README.md  Temp  game_hub_config.json  game_hub_launcher.py  requirements.txt  run_all_games.bat  run_all_games_mac.sh  run_game_hub.bat  run_studio.bat  run_studio.py  setup_game_hub.bat  stop_all_games.bat  stop_all_games_mac.sh  traffic_game.db
Traffic simulation Problem/: README.md  (+1 more)
knight's tour Problem (Python)/: .gitignore  .knights_tour.db  .knights_tour_winners.json  BACKEND_API.md  pyproject.toml  run_api.py  run_studio.bat  run_studio.py
knight's tour Problem (Python)/.git_backup_nested/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index
knight's tour Problem (Python)/.git_backup_nested/logs/: HEAD
knight's tour Problem (Python)/backend/knights_tour_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
knight's tour Problem (Python)/backend/knighttour/: algorithms.py  api.py  app.py  gui.py  storage.py
knight's tour Problem (Python)/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
knight's tour Problem (Python)/frontend/src/: App.tsx  api.ts  knightTour.ts  styles.css
knight's tour Problem (Python)/reports/: knight_tour_8x8_20_rounds_collab1_report.md  knight_tour_8x8_20_rounds_collab1_timing.csv  knight_tour_8x8_20_rounds_report.md  knight_tour_8x8_20_rounds_timing.csv
knight's tour Problem (Python)/tests/: test_knight_algorithms.py
knight's tour Problem (Python)/tools/: generate_timing_chart.py
(+130 files in other folders)
